# advanced-python

./: .gitignore  pyproject.toml
hw1/artifacts/: task1.txt  task2.txt  task3.txt
hw1/nl/: nl.py
hw1/tail/: file1.txt  tail.py
hw1/wc/: file1.txt  unicode.txt  wc.py
hw2/: Dockerfile  main.py  pyproject.toml
hw2/artifacts/: generated_document.tex  generated_table.tex  pypi.txt
hw2/lib/: latex_generator.py
hw3/: matrix1.py  matrix2.py
hw3/artifacts/task2/: matrix*.txt  matrix+.txt  matrix@.txt
