[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-python-course"
version = "0.1.0"
authors = [
    {name = "Maria Okorochkova", email = "m@okorochkova.ru"}
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/maladetska/advanced-python"
Repository = "https://github.com/maladetska/advanced-python"
